# open-scrapers-desk

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-windows.yml
docs/: architecture.md  discord-bots.md  environment-variables.md  packaging.md  publishing.md  release-workflow.md  roadmap.md  setup.md  toolkit-connection.md  troubleshooting.md
docs/wiki/: Architecture.md  Connecting-to-the-Toolkit.md  Discord-Bot-Bridge.md  Environment-Variables.md  FAQ.md  Home.md  Installation.md  Packaging-Windows-Builds.md  Publishing-Releases.md  Release-Workflow.md  Roadmap.md  Settings-and-Data-Locations.md  Troubleshooting.md  Using-the-Desktop-App.md  _Footer.md  _Sidebar.md
examples/automation/: scheduled-discord-webhook.py
examples/discord-bots/: discord-preset-command.py  discord-prompt-command.py  discord-py-message-command.py
installer/: OpenScrapersDesk.iss
scripts/: build_exe.py  capture_wiki_screenshots.py  smoke_test.py
src/open_scrapers_desk/: __init__.py  app.py  backend.py  discord_bridge.py  models.py  results.py  settings.py  style.py
src/open_scrapers_desk/ui/: main_window.py
