[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-scrapers-desk"
version = "0.3.0"
description = "PyQt desktop app and Python integration bridge for Open Scrapers Toolkit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ninezel" }
]
keywords = [
  "scrapers",
  "discord-bots",
  "pyqt",
  "desktop",
  "automation"
]

[project.optional-dependencies]
gui = ["PyQt6>=6.7"]
build = ["PyQt6>=6.7", "PyInstaller>=6.11"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
